crates/review-buddy/tests/snapshots/drafts__pending_list_100x30_default_theme.snap
---
source: crates/review-buddy/tests/drafts.rs
expression: text(& render(& mut a))
---
 review buddy  ·  demo · 4 sources · 7 changes                                           Liminal HQ
  1 ● All 7   2 ● liminal-hq 3   3 ● smorris 1   4 ● platform 2   5 ● gitlab.com 1
╭ queue ───────────────────────────────────────────────────────────────────────────────────────────╮
│  Waiting on you · 2                                                                              │
│▌ ◐ Add a menu bar and keyboard-driven menus                                              ✎ 3  2h │
│▌ GH review-buddy#214 · ada · review requested                                                    │
│  ● Raise muted text contrast in the light theme                                          ✎ 1  5h │
│  GH review-buddy#209 · jo · approved by you                                                      │
│                                                                                                  │
│  Worth a look · 2                                                                                │
│╭ Pending reviews · 3 ───────────────────────────────────────────────────────────────────────────╮│
││Drafts kept for this session only. Nothing here has been sent.                                  ││
││                                                                                                ││
││  liminal-hq  liminal-hq/review-buddy#214  Add a menu bar and keyboard-driven menus      ✎ 3  4h││
││▌ liminal-hq  liminal-hq/review-buddy#209  Raise muted text contrast in the …  ✎ 1  7h  outdated││
╰│  smorris  smorris/dotfiles#31  Tidy zsh startup                                         ✎ 2  1d│╯
╭│                                                                                                │╮
││                                                                                                ││
│╰ ⏎ open · x discard · esc close ────────────────────────────────────────────────────────────────╯│
│ +32 −1 · 3 files · opened 3d ago                                                                 │
│ a Approve  x Request changes  c Comment  ⏎ Diff  m Merge                                         │
│  Overview   Files 3   Checks 6   Conversation 3                                                  │
│ ──────────────────────────────────────────────────────────────────────────────────────────────── │
│ Adds a menu bar along the top and a Menu type that tracks the selected item.                     │
│                                                                                                  │
│ • Menu::select_next and Menu::select_prev move the highlight                                     │
│ • Menu::activate returns the action for the highlighted item                                     │
│ • The bar itself is a plain Line, so it picks up the active theme                                │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
 ⏎ diff  o open  y copy  s show filters  D pending  ? help  T theme  q quit
