crates/review-buddy/tests/snapshots/drafts__pending_list_160x40_dusk.snap
---
source: crates/review-buddy/tests/drafts.rs
expression: text(& render(& mut a))
---
 review buddy  ·  demo · 4 sources · 7 changes                                                                                                             Dusk
╭ sources ───────────────╮╭ queue ───────────────────────────────────────╮╭ liminal-hq/review-buddy#214 ──────────────────────────────────────────────────── ⟩ ╮
│▌ ● All               7 ││  Waiting on you · 2                          ││ Add a menu bar and keyboard-driven menus                                           │
│    every source        ││▌ ◐ Add a menu bar and keyboard-driv… ✎ 3  2h ││ ada wants ada/menus → main                                                         │
│  ● liminal-hq        3 ││▌ GH review-buddy#214 · ada · review requested││ +32 −1 · 3 files · opened 3d ago                                                   │
│    github.com          ││  ● Raise muted text contrast in the… ✎ 1  5h ││                                                                                    │
│  ● smorris           1 ││  GH review-buddy#209 · jo · approved by you  ││ a Approve  x Request changes  c Comment  ⏎ Diff  m Merge                           │
│    github.com          ││                                              ││                                                                                    │
│  ● platform          2 ││  Worth a look · 2                            ││  Overview   Files 3   Checks 6   Conversation 3                                    │
│    gitlab.platform.ex… ││  ✕ Cache pipeline status lookups          7h ││ ────────────────────────────────────────────────────────────────────────────────── │
│  ● gitlab.com        1 ││  GL flow!1182 · priya · you're mentioned     ││ Adds a menu bar along the top and a Menu type that tracks the selected item.       │
│    gitlab.com          ││  ● Tidy zsh startup                  ✎ 2  1d ││                                                                                    │
│                        ││  GH dotfiles#31 · smorris · yours            ││ • Menu::select_next and Menu::select_prev move the highlight                       │
│  Show  s to change     ││                                              ││ • Menu::activate returns the action for the highlighted item                       │
│  [x] reviewing         ││  Can wait · 1                                ││ • The bar itself is a plain Line, so it picks up the active theme                  │
│  [x] assigned          ││  ·╭ Pending reviews · 3 ─────────────────────────────────────────────────────────────────────────────╮                             │
│  [x] authored          ││  G│Drafts kept for this session only. Nothing here has been sent.                                    │                             │
│  [ ] drafts            ││   │                                                                                                  │◐ 1 running                  │
│  [ ] noise             ││  ▸│  liminal-hq  liminal-hq/review-buddy#214  Add a menu bar and keyboard-driven menus        ✎ 3  4h│↷ 1 skipped  ⊘ 1 cancelled   │
│                        ││   │▌ liminal-hq  liminal-hq/review-buddy#209  Raise muted text contrast in the li…  ✎ 1  7h  outdated│                             │
│                        ││  ─│  smorris  smorris/dotfiles#31  Tidy zsh startup                                           ✎ 2  1d│                             │
│                        ││  7│                                                                                                  │                             │
│                        ││   │                                                                                                  │te Vec doing anything for    │
│                        ││   ╰ ⏎ open · x discard · esc close ──────────────────────────────────────────────────────────────────╯                             │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││ Your review  not started                                                           │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
╰────────────────────────╯╰──────────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────╯
 ⏎ diff  o open  y copy  s show filters  D pending  ? help  T theme  q quit
